objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>vlocity_cmt__Billing</fullName>
        <description>There is a complaint about billing. This has to do with money.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Applied</fullName>
        </values>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>vlocity_cmt__Service Problem</fullName>
        <description>There is something wrong with the service. This does not include Billing issues.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Applied</fullName>
        </values>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>vlocity_cmt__Vlocity Support Process</fullName>
        <description>Vlocity Support Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Applied</fullName>
        </values>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>vlocity_cmt__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__BillingAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the billing account relevant to this case. Usually used for billing disputes.</description>
        <label>Billing Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Billing Cases</relationshipLabel>
        <relationshipName>BillingCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DisputeId__c</fullName>
        <label>DisputeId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Dispute_ID__c</fullName>
        <label>Dispute ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FollowUpTo__c</fullName>
        <description>If this activity is a follow up to a previous activity.</description>
        <label>Follow Up To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IndicatorImageName__c</fullName>
        <description>Formula: Calculated &quot;indicator&quot; image name based on the priority and status of this Case. Used to display an indicator image on this case when shown in the user interface.</description>
        <formula>IF(TEXT(Priority)==&apos;High&apos; &amp;&amp; TEXT(Status)!= &apos;Closed&apos;, &apos;highpriorityopen&apos;, (IF(TEXT(Priority)==&apos;High&apos; &amp;&amp; TEXT(Status)==&apos;Closed&apos;, &apos;highpriorityclose&apos;, (IF(TEXT(Priority)==&apos;Medium&apos; &amp;&amp; TEXT(Status)!= &apos;Closed&apos;, &apos;mediumpriorityopen&apos;, (IF(TEXT(Priority)==&apos;Medium&apos; &amp;&amp; TEXT(Status) == &apos;Closed&apos;, &apos;mediumpriorityclose&apos;, (IF(TEXT(Priority)==&apos;Low&apos; &amp;&amp; TEXT(Status)!=&apos;Closed&apos;, &apos;lowpriorityopen&apos;, IF(TEXT(Priority)==&apos;Low&apos; &amp;&amp; TEXT(Status) ==&apos;Closed&apos;, &apos;lowpriorityclose&apos;,&apos;&apos; ))) )))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indicator Image Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__InteractionNotes__c</fullName>
        <label>Interaction Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PremisesId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Premises</label>
        <referenceTo>vlocity_cmt__Premises__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PriorityImageName__c</fullName>
        <description>Formula: Calculated &quot;priority&quot; image name based on the priority of this Case. Used to display a priority image on this case when shown in the user interface.</description>
        <formula>TEXT(Priority)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority Image Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Reason__c</fullName>
        <description>The reason why the case was created, such as Instructions not clear, or User didn’t attend training. This field should be used instead of the Case Reason field if you want the available reasons to be dependent on the chosen Case Type.</description>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Problem with change of ownership</fullName>
                </value>
                <value>
                    <fullName>Problem with change of customer information</fullName>
                </value>
                <value>
                    <fullName>Problem with managing users</fullName>
                </value>
                <value>
                    <fullName>Problem with impairment accessibility</fullName>
                </value>
                <value>
                    <fullName>Problem with change of plan</fullName>
                </value>
                <value>
                    <fullName>Problem with change of mobile phone</fullName>
                </value>
                <value>
                    <fullName>Problem with change of SIM</fullName>
                </value>
                <value>
                    <fullName>Problem with friends and family number configuration</fullName>
                </value>
                <value>
                    <fullName>Problem with SIM unlock</fullName>
                </value>
                <value>
                    <fullName>Problem with service restoration</fullName>
                </value>
                <value>
                    <fullName>Problem with change of MSISDN</fullName>
                </value>
                <value>
                    <fullName>Problem creating account</fullName>
                </value>
                <value>
                    <fullName>Problem with IMEI</fullName>
                </value>
                <value>
                    <fullName>Problem with termination</fullName>
                </value>
                <value>
                    <fullName>Problem with change to retention plan</fullName>
                </value>
                <value>
                    <fullName>Problem with port-out</fullName>
                </value>
                <value>
                    <fullName>Problem with suspensions</fullName>
                </value>
                <value>
                    <fullName>Problem with voluntary suspension</fullName>
                </value>
                <value>
                    <fullName>Unacknowledged termination</fullName>
                </value>
                <value>
                    <fullName>Problem with delivery</fullName>
                </value>
                <value>
                    <fullName>Problem with port-in</fullName>
                </value>
                <value>
                    <fullName>Account info in blacklist removal request</fullName>
                </value>
                <value>
                    <fullName>Account requires credit evaluation exception</fullName>
                </value>
                <value>
                    <fullName>Adress does not have pre-feasibility</fullName>
                </value>
                <value>
                    <fullName>Problem with credit card</fullName>
                </value>
                <value>
                    <fullName>Problem with top-up creation</fullName>
                </value>
                <value>
                    <fullName>Problem with add-on creation</fullName>
                </value>
                <value>
                    <fullName>Unacknowledged purchase</fullName>
                </value>
                <value>
                    <fullName>Unacknowledged change of plan</fullName>
                </value>
                <value>
                    <fullName>Request change plan terms and conditions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ServiceAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the account (e.g., a location or a subscriber) that is the user of the service relevant to this case.</description>
        <label>Service Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Cases</relationshipLabel>
        <relationshipName>ServiceCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ServiceId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the service Asset which is the subject of this Case.</description>
        <label>Service ID</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Asset.AccountId</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Asset.vlocity_cmt__BillingAccountId__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Asset.vlocity_cmt__ServiceAccountId__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StatementId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Statement</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>vlocity_cmt__Statement__c.vlocity_cmt__AccountId__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>vlocity_cmt__Statement__c</referenceTo>
        <relationshipLabel>Disputes</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StatementLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Statement Line Item</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>vlocity_cmt__StatementLineItem__c.vlocity_cmt__StatementId__r.vlocity_cmt__AccountId__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.vlocity_cmt__StatementId__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>$Source.vlocity_cmt__StatementId__c</field>
                <operation>equals</operation>
                <valueField>vlocity_cmt__StatementLineItem__c.vlocity_cmt__StatementId__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.vlocity_cmt__StatementId__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>vlocity_cmt__StatementLineItem__c</referenceTo>
        <relationshipLabel>Disputes</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StatusImageName__c</fullName>
        <description>Formula: Calculated &quot;status&quot; image name based on the status of this Case. Used to display a status image on this case when shown in the user interface.</description>
        <formula>TEXT(Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Image Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SubscriptionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Subscription which is the subject of this Case.</description>
        <label>Subscription</label>
        <referenceTo>vlocity_cmt__Subscription__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__VerificationTimestamp__c</fullName>
        <label>Verification Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__VerifiedAgentName__c</fullName>
        <label>Verified Agent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <recordTypes>
        <fullName>vlocity_cmt__Billing</fullName>
        <active>true</active>
        <businessProcess>vlocity_cmt__Billing</businessProcess>
        <description>Billing complaint.</description>
        <label>Billing</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__MobilePhoneCase</fullName>
        <active>true</active>
        <businessProcess>vlocity_cmt__Vlocity Support Process</businessProcess>
        <description>Mobile Phone Case</description>
        <label>MobilePhoneCase</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__Service</fullName>
        <active>true</active>
        <businessProcess>vlocity_cmt__Service Problem</businessProcess>
        <description>There is something wrong with the service provided or a product associated with that service.</description>
        <label>Service</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>